# Fastapi_rest_api

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  restart.sh  start.sh  stop.sh
docker/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh
docker/nginx/: nginx.conf
manage/: README.md  remove.sh  restart.sh  start.sh  stop.sh
nginx/: default.conf
src/: __main__.py  app.py  config.py  factory_app.py
src/api/: app.py  factory_app.py
src/api/crud_operations/: base_crud_operations.py  order.py  schedule.py  table.py  user.py  user_auth.py  utils.py
src/api/dependencies/: auth.py
src/api/models/: order.py  relationships.py  schedule.py  table.py
src/api/routers/: order.py  schedule.py  table.py  user.py  users_auth.py
src/api/swagger/: order.py  schedule.py  table.py  user.py  user_auth.py
src/crud_operations/: base_crud_operations.py  client.py  order.py  schedule.py  table.py  user.py  user_auth.py  utils.py
src/db/: alembic.ini  cli.py  db_sqlalchemy.py
src/db/alembic_migrations/: env.py
src/db/tools/: db_operations.py  utils.py
src/logger/: main.py  settings.py
src/logic/: auth_logic.py
src/models/: client.py  order.py  relationships.py  schedule.py  table.py  user.py
src/routers/: client.py  order.py  schedule.py  table.py  user.py  users_auth.py
src/schemas/: validators.py
src/schemas/client/: base_schemas.py  response_schemas.py
src/schemas/order/: base_schemas.py  response_schemas.py
src/schemas/schedule/: base_schemas.py  response_schemas.py
src/schemas/table/: base_schemas.py  response_schemas.py
src/schemas/validators/: order.py
src/schemes/jwt/: base_shemes.py  response_schemes.py
src/schemes/order/: base_schemes.py  response_schemes.py
src/schemes/relationships/: orders_tables.py
src/swagger/: order.py  schedule.py  table.py  user.py  user_auth.py
src/utils/: dependencies.py  exceptions.py
tests/functional_tests/: conftest.py  test_data.py  utils.py
(+58 files in other folders)
