[tool.poetry]
name = "restaurant_api"
version = "0.1.0"
description = ""
authors = ["VanderSVan <101255612+VanderSVan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
fastapi = "^0.79.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.18.2"
pydantic = {extras = ["email"], version = "^1.9.1"}
alembic = "^1.8.1"
DateTimeRange = "^1.2.0"
blake2signer = "^2.5.0"
fastapi-mail = "^1.1.4"
passlib = "^1.7.4"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
