[tool.poetry]
name = "restaurant_api"
version = "0.1.0"
description = ""
authors = ["VanderSVan <101255612+VanderSVan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
fastapi = "^0.79.0"
fastapi-utils = "^0.2.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = {extras = ["email"], version = "^1.9.1"}
alembic = "^1.8.1"
DateTimeRange = "^1.2.0"
blake2signer = "^2.5.0"
fastapi-mail = "^1.1.4"
passlib = "^1.7.4"
bcrypt = "^3.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
requests = "^2.28.1"
celery = "^5.2.7"
redis = "^4.3.4"
flower = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
